# dot-backend

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  settings.py
app/core/: security.py  settings.py
app/db/: database.py
app/models/: collections.py  dotfiles.py  license_keys.py  users.py
app/routers/: admin.py  auth.py  collections.py  license_key.py  users.py
app/s3/: __init__.py  s3_bucket.py
app/schemas/: collections.py  dotfiles.py  license_key.py  token.py  users.py
app/services/: auth_service.py  collection_service.py  dotfile_service.py  file_storage_service.py  license_key_service.py  user_service.py
tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  test_collections.py  test_users.py
tests/helpers/: utils.py
