[project]
name = "dot-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "boto3>=1.40.61",
    "email-validator>=2.3.0",
    "fastapi>=0.118.0",
    "passlib>=1.7.4",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn>=0.37.0",
]
